--- a/settings.gradle
+++ b/settings.gradle
@@ -15,9 +15,10 @@ include 'client:jackson'
 include 'client:jfx'
 include 'client:mock'
 include 'client:rpc'
-include 'djvm'
+// TODO: Re-visit for Java 11
+//include 'djvm'
+//include 'djvm:cli'
 include 'docker'
-include 'djvm:cli'
 include 'webserver'
 include 'webserver:webcapsule'
 include 'experimental'
