Solve warning/errors from Proguard

--- a/constants.properties
+++ b/constants.properties
@@ -6,7 +6,7 @@ kotlinVersion=1.2.71
 # ***************************************************************#
 platformVersion=5
 guavaVersion=25.1-jre
-proguardVersion=6.0.3
+proguardVersion=6.1.0beta2
 bouncycastleVersion=1.60
 disruptorVersion=3.4.2
 typesafeConfigVersion=1.3.1
