Upgrade to Java 11 compatible version of Quasar library (0.8.0)
This change had a knock-on impact in the form of Plugins upgrade and "io.dropwizard.metrics:metrics" upgrade.

--- a/constants.properties
+++ b/constants.properties
@@ -1,4 +1,4 @@
-gradlePluginsVersion=4.0.39
+gradlePluginsVersion=5.0.41-SNAPSHOT
 kotlinVersion=1.2.71
 # ***************************************************************#
 # When incrementing platformVersion make sure to update          #
@@ -14,5 +14,5 @@ jsr305Version=3.0.2
 artifactoryPluginVersion=4.7.3
 snakeYamlVersion=1.19
 caffeineVersion=2.6.2
-metricsVersion=3.2.5
+metricsVersion=4.1.0-rc2
 metricsNewRelicVersion=1.1.1
